# hos

./: DOCS  Makefile  README  TODO  bench.sh  hos.cabal
share/: hos.conf  hos.init
src/: hos.hs  test.hs
src/HoS/: Core.hs
src/HoS/Network/: Base.hs  Handler.hs  Http.hs  Server.hs  Util.hs
src/HoS/Network/Handler/: Default.hs  FastCGI.hs
src/HoS/System/: Thread.hs
